# yupload

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test.py
yupload/: Constant.py  __init__.py
