[metadata]
name = yupload
version = 0.0.1
author = Terah
author_email = terah.dev@gmail.com
description = Youtube uploader using selenium
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/terahlunah/yupload


[options]
packages = find:
python_requires = >=3.9